# django-starter

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  make.py  make.sh  pyproject.toml
.github/workflows/: cd.yml
docker/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh
docker/db/: create-db.sh
make/: .conftest.py  files.py  files_test.py  messages.py  messages_test.py  processes.py  processes_test.py  prompts.py  prompts_test.py  run.py  settings.py  settings_test.py  test.sh
make/templates/: 400.html  403.html  404.html  500.html
make/users/: forms.py  models.py  models.test.py  serializers.py  serializers.test.py  urls.api-only.py  urls.py  views.py  views.test.py
next/: 1.md  2.md  apple.md  auth0.md  digitalocean.md  discord.md  facebook.md  github.md  google.md  instagram.md  linkedin.md  patreon.md  reddit.md  slack.md  snap.md  twitch.md
src/: .pytest.ini  pyproject.toml  pytest_test.py  requirements.dev.txt  requirements.txt  setup.cfg
