[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = "My starting point for new Django projects."
authors = ["Jason Godesky <jefgodesky@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
