[tool.poetry]
name = "django-starter-make"
version = "1.0.0"
description = "A make script for Django"
authors = ["Jason Godesky <jefgodesky@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
