[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = "My starting point for new Django projects."
authors = ["Jason Godesky <jefgodesky@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
psycopg2-binary = "^2.9.7"
django-allauth = "^0.56.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
pre-commit = "^3.4.0"

[tool.black]
line-length = 88
exclude = ["migrations", "env"]

[tool.isort]
line-length = 88
exclude = ["migrations", "env"]

[tool.flake8]
max-line-length = 88
exclude = ["migrations", "env"]

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
